Fixed IntroCard letter-spacing animation and layout

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ html {
 }
 
 body {
-  background-color: #ffedcc;
-  color: #eaeaea;
+  background-color: #ffe1ae;
+  color: #474747;
 
   font-family: 'Times New Roman', Times, serif;
   margin: 0;
